--- a/server/package.json
+++ b/server/package.json
@@ -10,29 +10,33 @@
     "create-demo-users": "node scripts/createDemoUsers.js",
     "setup": "node scripts/createDemoUsers.js"
   },
-  "keywords": ["inventory", "management", "qr-code"],
+  "keywords": [
+    "inventory",
+    "management",
+    "qr-code"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
+    "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
-    "qrcode": "^1.5.3",
     "multer": "^1.4.5-lts.1",
-    "csv-parser": "^3.0.0",
-    "nodemailer": "^6.9.4",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.4",
+    "qrcode": "^1.5.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
-
