Configure Railway deployment - single fullstack deployment with unified CORS

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "client": "cd client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install",
-    "vercel-build": "cd client && npm install && npm run build"
+    "vercel-build": "cd client && npm install && npm run build",
+    "build": "cd client && npm install && npm run build && cd ../server && npm install",
+    "start:production": "cd server && node server.js"
   },
   "keywords": [
     "inventory",
