Fix: Reset all team passwords and add password management tools
✅ Fixed login issues for all 7 spec teams
🔐 Created password reset script (resetTeamPasswords.js)
🧪 Added team login testing script (testTeamLogins.js)
📝 Added comprehensive team credentials documentation
⚙️ Added npm script: npm run reset-team-passwords

All team logins now working with correct passwords:
- IAW: iaw@msa.com / iaw123
- Ladders: ladders@msa.com / ladders123
- R2R: r2r@msa.com / r2r123
- Brothers Social: brothers@msa.com / brothers123
- Sister Social: sisters@msa.com / sisters123
- Hope: hope@msa.com / hope123
- Submissions: submissions@msa.com / submissions123

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "create-demo-users": "node scripts/createDemoUsers.js",
-    "setup": "node scripts/createDemoUsers.js"
+    "setup": "node scripts/createDemoUsers.js",
+    "reset-team-passwords": "node scripts/resetTeamPasswords.js"
   },
   "keywords": [
     "inventory",
