--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,7 @@
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "client/build",
-        "buildCommand": "cd client && npm install && npm run vercel-build"
+        "distDir": "build"
       }
     }
   ],
