--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,8 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
     "qrcode": "^1.5.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
