Set Node version to 20.17.0 to avoid localStorage auth error
- Update root and client package.json engines to pin Node 20.17.0
- Render will now use Node 20 where localStorage is not required during build

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "url": "https://github.com/ShaheerSaud2004/MSAINV.git"
   },
   "engines": {
-    "node": ">=14.0.0",
+    "node": "20.17.0",
     "npm": ">=6.0.0"
   },
   "devDependencies": {
