--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,10 @@
     "eject": "react-scripts eject",
     "vercel-build": "react-scripts build"
   },
+  "engines": {
+    "node": "20.17.0",
+    "npm": ">=6.0.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
