--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "build",
-        "buildCommand": "cd client && npm install && npm run build"
+        "buildCommand": "npm run build"
       }
     }
   ],
@@ -20,8 +20,11 @@
       "dest": "server/server.js"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/index.html"
     }
   ],
   "env": {
