Fix Vercel static build: Use root package.json with vercel-build script and correct distDir path

--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,11 @@
       "use": "@vercel/node"
     },
     {
-      "src": "client/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build"
+        "distDir": "client/build",
+        "buildCommand": "npm run vercel-build"
       }
     }
   ],
@@ -20,6 +21,10 @@
     },
     {
       "handle": "filesystem"
+    },
+    {
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot|json))",
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
